from typing import Protocol
from model.todo_model import ToDo
class TodoRepo(Protocol):
    def speichere(self, todo: ToDo) -> None: ...
    def update_todo(self, todo: ToDo) -> None: ...
    def lade_alle(self) -> list[ToDo]: ...
    def finde_todo_mit_id(self, todo_id: int) -> ToDo | None: ...
    def erledige_todo(self, todo_id: int) -> None: ...
    def loesche_todo(self, todo: ToDo) -> None: ...
    def filtere_todos(self, kat: str, prio: str, status: str) -> list[ToDo]: ...
    def naechste_id(self) -> int:...